--- a/css/common.css
+++ b/css/common.css
@@ -54,15 +54,16 @@ a{
   text-align: left;
 }
 
-.searchTableTitleTd{
+.TableTitleTdPad1{
   padding:10px;
   color:black;
   font-weight: bold;
-
 }
 
-.searchTableTd{
-  color:#cccccc;
+.TableTitleTdPad2{
+  padding:20px;
+  color:black;
+  font-weight: bold;
 }
 
 .serarchTableInput{
